<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="cn.autoio.test.MainActivity">

    <!-- CPU 测试 -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/thread_test"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/thread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/thread"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/threadAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/thread_add" />

        <Button
            android:id="@+id/threadSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thread_sub" />

        <Button
            android:id="@+id/threadClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thread_clear" />
    </LinearLayout>

    <!-- 内存 测试 -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/memory_test"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/memory"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/memoryAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_add" />

        <Button
            android:id="@+id/memorySub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_sub" />

        <Button
            android:id="@+id/memoryClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_clear" />
    </LinearLayout>

</LinearLayout>
